// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert> matches snapshot 1`] = `
<div>
  <div
    class="my-class css-1lrp5hn-container-container"
    id="alert"
  >
    <div
      class="icon"
      data-testid="icon"
    >
      <svg-file-stub
        height="56"
      />
    </div>
    <article>
      <h3
        class="css-3lqpyc-headingContainer-headingContainer"
      >
        Welcome
      </h3>
      <p>
        My content!
      </p>
    </article>
  </div>
</div>
`;

exports[`<Alert> matches snapshot with custom icon 1`] = `
<div>
  <div
    class="css-1lrp5hn-container-container"
  >
    <svg-file-stub
      classname="icon"
      data-testid="icon"
      height="56"
    />
    <article>
      <p>
        My content!
      </p>
    </article>
  </div>
</div>
`;
